# idol-c3

./: .gitignore  CMakeLists.txt  README.md  app.js  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: main.yml
components/Buzzer/: Buzzer.c  CMakeLists.txt
components/Buzzer/include/: Buzzer.h
components/controller/: CMakeLists.txt  ota_update.c  web_download_controller.c  wifi_controller.c
components/controller/include/: controller.h
components/esp_lcd_st7789/: CMakeLists.txt  esp_lcd_st7789v3.c
components/lvgl_port/: CMakeLists.txt  lv_port_disp.c  lv_port_fs.c  lv_port_indev.c  lv_port_tick.c
components/lvgl_port/include/: lv_port_disp.h  lv_port_indev.h  lv_port_tick.h
components/model/: CMakeLists.txt  wifi_bt_net_model.c
components/model/include/: wifi_bt_net_model.h
components/safe_fs/: CMakeLists.txt  safe_fatfs.c
components/safe_fs/include/: safe_fatfs.h
components/sht40/: CMakeLists.txt  sht40.c
components/sht40/include/: sht40.h
components/ui/: CMakeLists.txt  screen_main.c
components/ui/include/: ui.h
components/web_download/: CMakeLists.txt  web_download.c
components/web_download/include/: web_download.h
components/wifi_prov_mgr/: CMakeLists.txt  web_download.c  wifi_prov_mgr.c
components/wifi_prov_mgr/include/: web_download.h  wifi_prov_mgr.h
main/: CMakeLists.txt  Kconfig.projbuild  esp_lcd_st7789v3.c  esp_lcd_st7789v3.h  idf_component.yml  lvgl_demo_ui.c  main.c  milkytime.c  moiw_2014.c  spi_lcd_touch_example_main.c
scripts/: package_firmware.py
tools/: LVGLImage.py
